force-app/main/default/objects/Hiring_Team_Member__c/Hiring_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Hiring Team Member</label>
    <nameField>
        <displayFormat>HTM-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiring Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>