force-app/main/default/objects/Hiring_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Recruiter</fullName><default>false</default><label>Recruiter</label></value>
            <value><fullName>Hiring Manager</fullName><default>false</default><label>Hiring Manager</label></value>
            <value><fullName>Interviewer</fullName><default>false</default><label>Interviewer</label></value>
            <value><fullName>Coordinator</fullName><default>false</default><label>Coordinator</label></value>
            <value><fullName>Approver</fullName><default>false</default><label>Approver</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>